# LangChain_udemy

./: .gitignore  README.md  pyproject.toml
src/: chatbot_engine.py  gradio.app.py  slack.py
